<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hume_SQLite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_text">图片</string>
    <string name="btn_create_text">创建数据库</string>
    <string name="btn_delete_text">删除数据库</string>
    <string name="btn_createtab_text">创建数据库表</string>
    <string name="btn_deletetab_text">删除数据库表</string>

    <string name="btn_createdata_text">在表中添加一条数据</string>
    <string name="btn_deletedata_text">在表中删除一条数据</string>
    <string name="btn_editdata_text">在表中修改一条数据</string>
    <string name="btn_searchdata_text">在表中查找一条数据</string>

    <string name="btn_db_text">创建与删除数据库</string>
    <string name="btn_table_text">创建与删除数据库中的表</string>
    <string name="btn_data_text">增 删 改 查数据库中的数据</string>

</resources>
