<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#ff52ffb4">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/imageView02"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/image_text"
        android:layout_weight="0.5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_createtab_text"
        android:id="@+id/btn_createtab"
        android:layout_gravity="center_horizontal"
        android:background="#ffabd6ff"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_deletetab_text"
        android:id="@+id/btn_deletetab"
        android:layout_gravity="center_horizontal"
        android:background="#ffabd6ff"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />
</LinearLayout>
